<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/common_padding_default">

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login_welcome"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:gravity="center"
        android:layout_marginEnd="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgIcon"
        app:layout_constraintTop_toTopOf="@id/imgIcon"
        app:layout_constraintBottom_toBottomOf="@id/imgIcon"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEmail"
        android:layout_width="@dimen/login_width_button"
        android:layout_height="wrap_content"
        android:text="@string/login_email"
        android:backgroundTint="@color/orange_500"
        app:icon="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintBottom_toTopOf="@id/guideline"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_google"
        android:backgroundTint="@color/blue_google"
        app:icon="@drawable/ic_google"
        app:layout_constraintStart_toStartOf="@id/btnEmail"
        app:layout_constraintEnd_toEndOf="@id/btnEmail"
        app:layout_constraintTop_toBottomOf="@id/btnEmail"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_facebook"
        android:backgroundTint="@color/blue_facebook"
        app:icon="@drawable/ic_facebook"
        app:layout_constraintStart_toStartOf="@id/btnEmail"
        app:layout_constraintEnd_toEndOf="@id/btnEmail"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_phone"
        android:backgroundTint="@color/green_500"
        app:icon="@drawable/ic_phone"
        app:layout_constraintStart_toStartOf="@id/btnEmail"
        app:layout_constraintEnd_toEndOf="@id/btnEmail"
        app:layout_constraintTop_toBottomOf="@id/btnFacebook"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:gravity="center"
        tools:text="Terminos y condiciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>














</androidx.constraintlayout.widget.ConstraintLayout>